# demo-service-api

./: .gitignore  CODEOWNERS  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-image.yml
deploy/: values.yaml
k8s/: deployment.yaml  service.yaml
src/demo_service_api/: __init__.py  main.py
tests/: test_app.py  test_container.py
